errorFIle.txt
/home/nicola/Documents/Scacchiera-elettronica/src/Piece.cpp: In member function ‘bool Alfiere::is_valid_move(Piece (&)[Y][X], int, int, int, int)’:
/home/nicola/Documents/Scacchiera-elettronica/src/Piece.cpp:260:26: error: no matching function for call to ‘Alfiere::is_end_same_color(int&, int&)’
  260 |     if (is_end_same_color(end_y, end_x)) //posso crearlo nella classe padre is_friend
      |         ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~
In file included from /home/nicola/Documents/Scacchiera-elettronica/src/Piece.cpp:6:
/home/nicola/Documents/Scacchiera-elettronica/include/Piece.h:27:10: note: candidate: ‘template<int Y, int X> bool Piece::is_end_same_color(Piece (&)[Y][X], int, int)’
   27 |     bool is_end_same_color(Piece (&Board)[Y][X], int end_y, int end_x);
      |          ^~~~~~~~~~~~~~~~~
/home/nicola/Documents/Scacchiera-elettronica/include/Piece.h:27:10: note:   template argument deduction/substitution failed:
/home/nicola/Documents/Scacchiera-elettronica/src/Piece.cpp:260:26: note:   mismatched types ‘Piece [Y][X]’ and ‘int’
  260 |     if (is_end_same_color(end_y, end_x)) //posso crearlo nella classe padre is_friend
      |         ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~
